:art: improve readability for server side logging